[QZ-94] fixed visual bugs related to 1) the questionText not showing fully and 2) the answerSelection text overflowing

--- a/src/components/AnswerInputField/AnswerInputField.css
+++ b/src/components/AnswerInputField/AnswerInputField.css
@@ -67,6 +67,7 @@
     line-height: normal;
     box-sizing: border-box;
     overflow: hidden;
+    z-index: 2;
 }
 
 .answerInputField .threeDots {
