--- a/src/pages/Quiz/QuizSessionQuestion/QuizSessionQuestion.css
+++ b/src/pages/Quiz/QuizSessionQuestion/QuizSessionQuestion.css
@@ -38,7 +38,6 @@
     line-height: normal;
     margin: 0;
     max-width: 100%;
-    overflow: hidden;
     text-overflow: ellipsis;
 }
 .quizSessionQuestion .content .marginBottom {
